<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="com.fouroulis.vasilis.artkotsis.model.PaperItem"  />
    </data>

    <RelativeLayout
        android:id="@+id/item_detail"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textIsSelectable="true"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:orientation="horizontal"
        tools:context=".ItemDetailFragment">

        <!-- Arrows -->
        <RelativeLayout
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/container_arrows"
            android:layout_above="@+id/toolbar">

            <ImageView
                android:layout_width="39dp"
                android:layout_height="121dp"
                android:src="@drawable/arrow1"
                android:layout_marginTop="60dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="39dp"
                android:layout_height="121dp"
                android:src="@drawable/arrow2"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="60dp"
                android:layout_alignParentBottom="true"
                tools:ignore="ContentDescription" />
        </RelativeLayout>

        <!-- details-->
        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="250dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="20dp"
            android:padding="20dp"
            android:background="@drawable/borders_details"
            android:layout_marginStart="20dp"
            android:layout_toLeftOf="@+id/image_view"
            android:layout_toStartOf="@+id/image_view"
            android:layout_above="@+id/toolbar">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:id="@+id/title"
                app:font="@{`OratorStd.otf`}"
                android:layout_alignParentTop="true"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#000"
                app:font="@{`OratorStd.otf`}"
                android:text="@string/gramsPerSquareMetre"
                android:id="@+id/density"
                android:layout_above="@+id/density_pointer"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:id="@+id/density_pointer"
                android:text="@string/dpi"
                android:layout_above="@+id/color"
                app:font="@{`OratorStd.otf`}" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:id="@+id/color"
                android:text="@string/color"
                android:layout_above="@+id/date"
                app:font="@{`OratorStd.otf`}" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:id="@+id/date"
                android:text="122222222"
                android:layout_above="@+id/time"
                app:font="@{`OratorStd.otf`}" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:id="@+id/time"
                android:text="12:21"
                android:layout_above="@+id/bytes"
                app:font="@{`OratorStd.otf`}" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:id="@+id/bytes"
                android:text="@{item.bytes}"
                android:layout_above="@+id/paper"
                app:font="@{`OratorStd.otf`}" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:id="@+id/paper"
                android:text="@{item.paperType}"
                android:layout_above="@+id/scan_jet"
                app:font="@{`OratorStd.otf`}" />

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textColor="#000"
                android:id="@+id/scan_jet"
                android:text="@{item.scanPrinter}"
                android:layout_alignParentBottom="true"
                app:font="@{`OratorStd.otf`}" />

        </RelativeLayout>

        <!-- toolbar -->
        <LinearLayout
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/toolbar"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:background="@drawable/background_toolbar">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:font="@{`app_font.otf`}"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorAccent"
                android:text="@string/toolbar_title_1" />

            <View
                android:layout_height="10dp"
                android:layout_width="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/fullstop_background"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:font="@{`app_font.otf`}"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorAccent"
                android:text="@string/toolbar_title_2" />

            <View
                android:layout_height="10dp"
                android:layout_width="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/fullstop_background"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:font="@{`app_font.otf`}"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/colorAccent"
                android:text="@string/toolbar_title_3" />

            <View
                android:layout_height="10dp"
                android:layout_width="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/fullstop_background"/>

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:font="@{`app_font.otf`}"
                android:layout_gravity="center_vertical"
                android:textSize="25sp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"
                android:text="@string/toolbar_title_4" />

        </LinearLayout>

        <FrameLayout
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="18dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/background_sec_toolbar"/>

        <!-- Image -->
        <ImageView
            android:layout_width="470dp"
            android:layout_alignParentRight="true"
            android:layout_height="match_parent"
            android:id="@+id/image_view"
            android:scaleType="fitCenter"
            android:layout_marginRight="120dp"
            android:background="@color/colorAccent"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="50dp"/>



    </RelativeLayout>

</layout>
